statisztika, kulon fok fuggveny

--- a/eltranzitiv/Makefile
+++ b/eltranzitiv/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-c -Wall -g -std=gnu++11
+CFLAGS=-c -Wall -g -O2 -std=gnu++11
 LDFLAGS=-ldb_cxx
 SOURCES=backtrack.cxx
 OBJECTS=$(SOURCES:.cxx=.o)
@@ -9,6 +9,9 @@ all: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
+	objcopy --only-keep-debug $@ $@.dbg
+	objcopy --strip-debug $@
+	objcopy --add-gnu-debuglink=$@.dbg $@
 
 %.o: %.cxx
 	$(CC) $(CFLAGS) $< -o $@
